# rog

./: .gitignore  Cargo.toml  LICENSE-MIT  plot_benchmark_runs.py  readme.md
bench/: Cargo.toml
bench/src/: main.rs
diff_images/: Cargo.toml
diff_images/src/: main.rs
image_inspector/: Cargo.toml
image_inspector/src/: app.rs  error.rs  main.rs
preview/: Cargo.toml
preview/src/: app.rs  fragment.fs  lib.rs  preview_quad.rs  util.rs  vertex.rs  vertex.vs
preview/src/full_screen_quad/: fragment.fs  vertex.vs
read_image/: Cargo.toml
read_image/src/: main.rs
read_image_pixel/: Cargo.toml
read_image_pixel/src/: main.rs
renderer/: Cargo.toml
renderer/src/: args.rs  barycentric.rs  camera.rs  cie_data.rs  color.rs  environment.rs  lib.rs  light.rs  material.rs  mesh.rs  raytracer.rs  render_settings.rs  rw_spectrum.rs  scene.rs  small_thread_rng.rs  spectrum.rs  texture.rs  util.rs
renderer/src/raytracer/: aabb.rs  acceleration.rs  axis.rs  bsdf.rs  geometry.rs  ray.rs  sampling.rs  scene_statistics.rs  single_channel_image.rs  working_image.rs
renderer/src/raytracer/acceleration/: bih.rs  bvh.rs  bvh_rec.rs  helpers.rs  kdtree.rs  sah.rs  statistics.rs  structure.rs  top_level.rs
renderer/src/raytracer/bsdf/: fresnel.rs
renderer/src/raytracer/scene_statistics/: voxel_geometry.rs
renderer_cli/: Cargo.toml
renderer_cli/src/: main.rs
res/: cube.glb  simple_raytracer_test.glb  simplest.glb
res/scenes/: simple_raytracer_test.glb
src/: acceleration_benchmark.rs  app.rs  args.rs  camera.rs  cie_data.rs  color.fs  color.rs  constants.rs  diff_images.rs  environment.rs  lib.rs  light.rs  main.rs  material.rs  mesh.rs  passthrough.vs  raytracer.rs  read_image.rs  read_image_pixel.rs  render_settings.rs  rustfmt.toml  sampling.rs  scene.rs  scene_version.rs  spectrum.rs  texture.rs  util.rs
src/diff_images/: diff_images.rs  structural_similarity.rs
src/preview/: app.rs  fragment.fs  full_screen_quad.rs  mod.rs  passthrough.vs  preview_quad.rs  vertex.vs
src/preview/full_screen_quad/: vertex.vs
src/raytracer/: aabb.rs  acceleration.rs  axis.rs  bsdf.rs  file_formatting.rs  geometry.rs  ray.rs  sampling.rs  scene_statistics.rs  shadingframe.rs  triangle.rs  working_image.rs
src/raytracer/acceleration/: bih.rs  bvh.rs  bvh_rec.rs  helpers.rs  kdtree.rs  sah.rs  statistics.rs  structure.rs  top_level.rs
src/raytracer/bsdf/: fresnel.rs
