[package]
name = "renderer"
version = "0.1.0"
authors = ["kamp <nbvdkamp@gmail.com>"]
edition = "2021"
default-run = "renderer"


[profile.release]
debug = true

[features]
stats = []

[[bin]]
name = "bench"
path = "src/acceleration_benchmark.rs"

[dependencies]
impl_ops = "0.1.1"
image = "0.24"
rand = "0.8.4"
crossbeam-deque = "0.8.2"
num_cpus = "1.13.1"
lerp = "0.4.0"
rayon = "1.5.3"
static_assertions = "1.1.0"
arrayvec = "0.7.2"
rgb2spec = "0.1.0"
sha2 = "0.10.6"
byteorder = "1.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

glfw = "0.44.0"

luminance = "0.47.0"
luminance-derive = "0.10.0"
luminance-front = "0.6.1"
luminance-glfw = "0.18.2"
luminance-windowing = "0.10.1"


[dependencies.cgmath]
version = "0.18.0"
features = ["serde"]

[dependencies.clap]
version = "4.0.15"
features = ["string"]

[dependencies.gltf]
git = "https://github.com/nbvdkamp/gltf"
features = [
    "extras",
    "KHR_lights_punctual",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_texture_transform",
]