[workspace]

resolver = "2"
members = [
    "renderer",
    "preview",
    "renderer_cli",
    "bench",
    "diff_images",
    "image_inspector",
    "read_image",
    "read_image_pixel",
]

[profile.release]
debug = true

[workspace.dependencies]
num_cpus = "1.13.1"
itertools = "0.11.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_arrays = "0.1.0"

[workspace.dependencies.cgmath]
version = "0.18.0"
features = ["serde"]

[workspace.dependencies.clap]
version = "4.0.15"
features = ["string"]
