[package]
name = "renderer"
version = "0.1.0"
authors = ["kamp <nbvdkamp@gmail.com>"]
edition = "2021"

[features]
stats = []

[dependencies]
impl_ops = "0.1.1"
image = "0.24"
rand = "0.8.4"
crossbeam-deque = "0.8.2"
lerp = "0.5.0"
rayon = "1.5.3"
static_assertions = "1.1.0"
arrayvec = "0.7.2"
rgb2spec = "0.1.1"
sha2 = "0.10.6"
byteorder = "1.4.3"
fnv = "1.0.7"
derivative = "2.2.0"

num_cpus = { workspace = true }
itertools = { workspace = true }

serde_json = { workspace = true }
serde_arrays = { workspace = true }

serde = { workspace = true, features = ["derive"] }
[dependencies.cgmath]
workspace = true
features = ["serde"]

[dependencies.clap]
workspace = true
features = ["string"]

[dependencies.gltf]
git = "https://github.com/nbvdkamp/gltf"
features = [
    "extras",
    "KHR_lights_punctual",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_emissive_strength",
    "KHR_texture_transform",
]

[dependencies.postcard]
version = "1.0.2"
features = ["alloc"]
default-features = false
